src/test/resources/Parser/SyntaxErrors/InvalidOpenDeclaration2.front
class A:
    open test(a: A);